Add unconditional change

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,18 @@
             ]
         },
         {
+            "name": "Cifar10 Imgen Warm",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${cwd}/src/cdnp/train.py",
+            "console": "integratedTerminal",
+            "args": [
+                "-cn",
+                "cifar10_imgen_fm_warm",
+                "mode=dev"
+            ]
+        },
+        {
             "name": "CIFAR10 Inpaint Flow Matching Warm Start",
             "type": "debugpy",
             "request": "launch",
