--- a/src/config/celeba_inpaint_fm_warm.yaml
+++ b/src/config/celeba_inpaint_fm_warm.yaml
@@ -3,36 +3,11 @@ defaults:
   - data: celeba
   - task: inpaint
   - model: warm_start_fm
+  - model_type: generative
   - _self_
-
-execution:
-  train_steps: 5000000
-  gradient_clip_norm: 3.0
-  accumulate_steps: 4 # Effective batch size = 512, matching the repo
-  ema_rate: 0.999
 
 output:
   eval_freq: 20000
-  metrics:
-    - _target_: cdnp.evaluate.LossMetric
-    - _target_: cdnp.evaluate.FIDMetric
-      num_samples: 1000
-      means: ${data.dataset.norm_means}
-      stds: ${data.dataset.norm_stds}
-      device: ${runtime.device}
-      nfe: 50
-    - _target_: cdnp.evaluate.FIDMetric
-      num_samples: 1000
-      means: ${data.dataset.norm_means}
-      stds: ${data.dataset.norm_stds}
-      device: ${runtime.device}
-      nfe: 10
-    - _target_: cdnp.evaluate.FIDMetric
-      num_samples: 1000
-      means: ${data.dataset.norm_means}
-      stds: ${data.dataset.norm_stds}
-      device: ${runtime.device}
-      nfe: 5
 
 model:
   warm_start_model:
@@ -49,10 +24,6 @@ model:
   min_warmth: 0.0
   max_warmth: 1.0
 
-
-optimizer:
-  lr: 1e-4
-  betas: [0.9, 0.95]
 
 data:
   trainloader:
