--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,9 @@ dependencies = [
     "h5netcdf>=1.6.1",
     "torchdiffeq>=0.2.5",
     "torchmetrics[image]>=1.7.4",
-    "mlbnb>=0.1.3",
+    "mlbnb==0.1.3",
     "ty>=0.0.1a16",
+    "datasets>=4.4.1",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
