--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,22 +6,17 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.10
+  - repo: local
     hooks:
-      - id: ruff-check
-        args: [--fix]
-      - id: ruff-format
+      - id: ruff
+        name: ruff
+        entry: ruff check src tests --fix
+        language: system
+        pass_filenames: false
   - repo: local
     hooks:
       - id: ty
         name: ty
         entry: ty check src tests
-        language: system
-  - repo: local
-    hooks:
-      - id: pytest
-        name: pytest
-        entry: pytest tests/unit
         language: system
         pass_filenames: false
