Make tiny model smaller, use residuals

--- a/src/config/afhq_superresolution_cnp.yaml
+++ b/src/config/afhq_superresolution_cnp.yaml
@@ -13,6 +13,7 @@ model:
     out_channels: 6 # RGB Mean + Std
   min_std: 0.01 # Minimum stddev to stabilise
   device: ${runtime.device}
+  residual: true
 
 data:
   trainloader:
