--- a/src/config/model/backbone/tiny_no_attention.yaml
+++ b/src/config/model/backbone/tiny_no_attention.yaml
@@ -11,14 +11,12 @@ model:
     out_channels: ${data.in_channels}
     layers_per_block: 2
     resnet_time_scale_shift: "scale_shift"
-    block_out_channels: [32, 64, 128, 256]
+    block_out_channels: [32, 64, 128]
     down_block_types:
       - DownBlock2D
       - DownBlock2D
       - DownBlock2D
-      - DownBlock2D
     up_block_types:
-      - UpBlock2D
       - UpBlock2D
       - UpBlock2D
       - UpBlock2D
