--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "mlbnb==0.1.3",
     "ty>=0.0.1a16",
     "datasets>=4.4.1",
+    "seaborn>=0.13.2",
 ]
 requires-python = ">=3.11.0"
 readme = "README.md"
